--- a/angular-master/index.html
+++ b/angular-master/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>首页</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/layer.css">
 		<link rel="stylesheet" href="http://at.alicdn.com/t/font_998045_86h1d6d54u.css">
